--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^4.18.2",
     "prompt": "^1.3.0",
     "prompt-sync": "^4.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
