--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "prompt": "^1.3.0",
-    "prompt-sync": "^4.2.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
