--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "project1",
-  "type": "module",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
+    "name": "project1",
+    "type": "module",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+      "start": "nodemon server.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+      "express": "^4.18.2",
+      "prompt": "^1.3.0",
+      "prompt-sync": "^4.2.0"
+    },
+    "devDependencies": {
+      "nodemon": "^2.0.22"
+    }
   }
-}
