--- a/package.json
+++ b/package.json
@@ -5,17 +5,16 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "start": "nodemon server.js"
+        "start": "nodemon server.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "express": "^4.18.2",
-      "prompt": "^1.3.0",
-      "prompt-sync": "^4.2.0"
+        "express": "^4.18.2",
+        "prompt": "^1.3.0"
     },
     "devDependencies": {
-      "nodemon": "^2.0.22"
+        "nodemon": "^2.0.22"
     }
-  }
+}
